# m5stack-remo-monitor

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  build.rs  sdkconfig.defaults
.cargo/: config.toml
components/calc/: CMakeLists.txt  calc.c  calc.h
components/lgfx_c/: lgfx_c.cpp  lgfx_c.h
lgfx/: Cargo.toml  build.rs
lgfx/components/lgfx_c/: CMakeLists.txt  lgfx_c.cpp
lgfx/lgfx_c/: lgfx_c.h
lgfx/src/: lib.rs
src/: chart.rs  comm_esp.rs  comm_linux.rs  config.rs  config.rs.template  lgfx.rs  main.rs
