[package]
name = "m5stack-remo-monitor"
version = "0.1.0"
authors = ["Kenta IDA <fuga@fugafuga.org>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
anyhow = "1"
attohttpc = {version = "0.22.0", default-features = false, features = []}
embedded-graphics = "0.7.1"
embedded-hal = "=1.0.0-alpha.8"
embedded-svc = {version = "0.22.1", features = ["experimental"]}
esp-idf-hal = "0.38.1"
esp-idf-svc = { version = "0.42.3", features = ["experimental"]}
esp-idf-sys = { version = "0.31.9", features = ["binstart"] }
log = "0.4.17"
num_enum = "0.5.7"
lgfx = { path = "lgfx" }

[build-dependencies]
embuild = "0.30"
anyhow = "1"
png = "0.17.6"

[package.metadata.esp-idf-sys]
extra_components = [
    { component_dirs = [ "lgfx/components/lgfx_c", "lgfx/components/LovyanGFX" ] },
]
